# camera_calibration_tools

./: .clang-format  .gitignore  README.md  docker-compose.yaml  dockerfile
calib_tools/: CMakeLists.txt
calib_tools/app/: CMakeLists.txt  mainwindow.ui
calib_tools/app/icons/: calib_tools.desktop  calib_tools.rc
calib_tools/app/include/app/: mainwindow.hpp
calib_tools/app/include/app/dialogs/: camera_settings_dialog.hpp  dialogs.hpp  stream_settings_dialog.hpp
calib_tools/app/include/app/image_sources/: camera_image_source.hpp  file_image_source.hpp  image_source_interface.hpp  image_source_worker.hpp  image_sources.hpp  stream_image_source.hpp
calib_tools/app/include/app/tools/chessboard/: chessboard_worker.hpp
calib_tools/app/include/app/tools/line_based/: line_based_view.hpp  line_based_worker.hpp
calib_tools/app/src/: main.cpp  mainwindow.cpp
calib_tools/app/src/dialogs/: camera_settings_dialog.cpp  stream_settings_dialog.cpp
calib_tools/app/src/image_sources/: camera_image_source.cpp  file_image_source.cpp  image_source_worker.cpp  stream_image_source.cpp
calib_tools/app/src/tools/chessboard/: chessboard_worker.cpp
calib_tools/app/src/tools/line_based/: line_based_view.cpp  line_based_worker.cpp
calib_tools/app/translations/: calib_tools_ru.ts
calib_tools/calib_tools_lib/: CMakeLists.txt
calib_tools/calib_tools_lib/include/calib_tools_lib/: calib_tools_lib.hpp  camera_intrinsics.hpp  cashed_undistort.hpp  chessboard_calibrator.hpp  line_based_calibrator.hpp
calib_tools/calib_tools_lib/src/: camera_intrinsics.cpp  cashed_undistort.cpp  chessboard_calibrator.cpp  line_based_calibrator.cpp
scripts/: build.sh
